--- a/cyrille-vins/src/index.css
+++ b/cyrille-vins/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html body {
+  background-color: blanchedalmond;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#logo {
+  height: 60px;
+  width: auto;
+  border-radius: 50%;
+}
+.bottle-presentation {
+  border-radius: 30%;  /* Ceci rend l'image ronde */
 }
